# aiogramTemplate

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
scripts/: run_black.sh  run_bot.sh
src/bot/: bot_commands.py  config.py  config_reader.py  const.py  helpers.py  main.py
src/bot/answers/: const.py
src/bot/callbacks/: __init__.py
src/bot/commands/: cmd_extra.py  cmd_fsm_food.py  cmd_group_games.py  cmd_start.py  cmd_with_numbers.py  unprocessable_updates.py
src/bot/config/: base_router.py  config.py  config_reader.py  localization.py
src/bot/config/l10n/: en_locale.ftl
src/bot/filters/: find_usernames.py
src/bot/keyboards/: choice.py  main.py  questions.py
src/bot/middlewares/: __init__.py  base.py
